2003-01-02  Joseph Valenzuela  <jvalenzu@formosa.infinite-monkeys.org>

	* test/.cvsignore
	* test/testattributes.c
	* test/Makefile.in
	Added attribute testing

	* src/al_types.h
	Added space for flag saving, context/device association.

	* src/alc/alc_context.c
	* src/alc/alc_device.c
	* src/alc/alc_device.h
	Context attribute management

	* src/al_source.c
	Addition queue fixes.

2002-12-30  Joseph Valenzuela  <jvalenzu@formosa.infinite-monkeys.org>

	* openal/linux/src/al_mixer.c
	* openal/linux/src/al_source.c
	Fix assertions for queue mixing, not done yet.


2002-12-17  Joseph Valenzuela  <jvalenzu@formosa.infinite-monkeys.org>
	* src/al_queue.c
	* src/al_mixer.c
        * src/al_source.c
        * src/al_source.h
	Re-added Zoltan Ponekker's patch to fix queue looping.
	
2002-12-04  Joseph Valenzuela  <jvalenzu@formosa.infinite-monkeys.org>

	* src/al_filter.c
	Added John Quigley's change to queue gain stuff.

	* src/al_queue.c
	* src/al_mixer.c
        * src/al_source.c
        * src/al_source.h
	Added Zoltan Ponekker's patch to consolidate queue looping.

2002-11-19  Joseph Valenzuela  <jvalenzu@formosa>

	* openal/linux/src/al_source.c
	* openal/include/AL/al.h
	Added alGetSource3f for compatibility with win implementation.

2002-09-19  Joseph Valenzuela  <jvalenzu@formosa>

	* src/arch/alsa/alsa.c
	Added Dirk's alsa changes

	* CREDITS
	Added Dirk Ehlke's name

2002-09-17  Joseph Valenzuela  <jvalenzu@formosa>

	* src/al_filter.c
	Fixed stupidity where source's gain wasn't being applied
	to non distance attentuated sources.  

2002-09-16  Christopher Purnell  <cjp@lost.org.uk>

	* src/al_filter.c
	* src/al_filter.h
	* src/al_types.h
	Added a panning filter.  This calculates the directional speaker gains
	in a way that is independant of distance.

        * src/alc/alc_speaker.c
        * src/alc/alc_speaker.h
	Speaker distace now has a value of 1 to simplify the math.

2002-09-09  Ryan C. Gordon  <ryan@epicgames.com>

	* src/alc/alc_context.c: